# vulfram

./: .gitignore  AGENTS.md  Cargo.toml  OPTION.md  README.md  THIRD-PARTY-LICENSES.md  TODO.md  package.json  tsconfig.json  vulfram.code-workspace
.github/: copilot-instructions.md
.github/workflows/: build-bindings.yml
assets/: UI.md  colors.css
bind/ts/: .npmignore  .prettierignore  .prettierrc  package.json  tsconfig.json
bind/ts/src/: dev.ts  enums.ts  index.ts  vulfram.d.ts
bind/ts/src/cmds/: common.ts  index.ts  layer-masks.ts  material-helpers.ts  render-results.ts  render.ts  uniform-values.ts  viewport-helpers.ts
bind/ts/src/events/: gamepad.ts  index.ts  keyboard.ts  window.ts
bind/ts/src/ffi/: index.ts
bind/ts/src/napi/: index.ts
binding/: package.json  tsconfig.json
binding/bun/: tsconfig.json
binding/bun/src/: events.ts  index.ts
binding/bun/src/cmds/: index.ts
binding/bun/src/events/: common.ts  pointer.ts  window.ts
binding/src/: dev.ts  enums.ts  index.ts
binding/src/cmds/: common.ts  results.ts  window.ts
binding/src/events/: gamepad.ts  keyboard.ts  pointer.ts  system.ts  window.ts
binding/src/napi/: index.d.ts
core/: Cargo.toml
core/src/: lib.rs  main.rs  test.rs
core/src/core/: buffers.rs  gamepad.rs  handler.rs  lifecycle.rs  mod.rs  profiling.rs  queue.rs  result.rs  singleton.rs  state.rs  tick.rs
core/src/core/cache/: gamepad.rs  input.rs
core/src/core/cmd/: mod.rs
core/src/core/cmd/events/: common.rs  converters.rs  gamepad.rs  keyboard.rs  pointer.rs  system.rs  window.rs
core/src/core/cmd/render/: camera.rs  geometry.rs  material.rs  mod.rs  model.rs  sampler.rs  shader.rs  texture.rs
core/src/core/cmd/win/: attention.rs  create.rs  cursor.rs  decorations.rs  mod.rs  properties.rs
core/src/core/render/: allocator.rs  binding.rs  buffers.rs  components.rs  enums.rs  material_types.rs  mod.rs  pipeline.rs  resources.rs  state.rs
core/src/core/render/passes/: compose.rs  forward.rs  (+1 more)
docs/: ABI.md  API.md  ARCH.md  GLOSSARY.md  INDEX.md  MASCOT-DEFINITION.md  OVERVIEW.md  PLATFORM-PROXIES.md  RENDER-GRAPH.md  UI-CMDS.md  UI.md  WASM-PLAN.md
docs/cmds/: cmd-audio-listener-bind-model.md  cmd-audio-listener-create.md  cmd-audio-listener-dispose.md  cmd-audio-listener-update.md  cmd-audio-resource-create.md  cmd-audio-resource-dispose.md  cmd-audio-resource-push.md  cmd-audio-source-bind-model.md  cmd-audio-source-create.md  cmd-audio-source-dispose.md  cmd-audio-source-pause.md  cmd-audio-source-play.md  cmd-audio-source-stop.md  cmd-audio-source-update.md  cmd-camera-create.md  cmd-camera-dispose.md  cmd-camera-list.md  cmd-camera-update.md  cmd-geometry-create.md  cmd-geometry-dispose.md  cmd-geometry-list.md  cmd-geometry-update.md  cmd-gizmo-draw-aabb.md  cmd-gizmo-draw-line.md  cmd-light-create.md  cmd-light-dispose.md  cmd-light-list.md  cmd-light-update.md  cmd-material-create.md  cmd-material-dispose.md  cmd-material-list.md  cmd-material-update.md  cmd-model-create.md  cmd-model-dispose.md  cmd-model-list.md  cmd-model-update.md  cmd-notification-send.md  cmd-primitive-geometry-create.md  cmd-render-graph-set.md  cmd-shadow-configure.md  (+26 more)
scripts/: check.sh
src/: lib.rs  main.rs
src/core/: buffers.rs  cmd.rs  handler.rs  image.rs  lifecycle.rs  mod.rs  profiling.rs  queue.rs  result.rs  singleton.rs  state.rs  tick.rs
src/core/audio/: cmd.rs  kira.rs  mod.rs  proxy.rs  webaudio.rs
src/core/buffers/: cache.rs  cmd.rs  mod.rs  state.rs
src/core/buffers/cmd/: buffers.rs
src/core/cache/: gamepad.rs  input.rs  mod.rs  window.rs
src/core/cmd/: mod.rs  win.rs
src/core/cmd/events/: common.rs  converters.rs  gamepad.rs  keyboard.rs  mod.rs  pointer.rs  system.rs  window.rs
src/core/cmd/win/: create.rs  cursor.rs  properties.rs
src/core/gamepad/: cache.rs  converters.rs  events.rs  mod.rs  state.rs
src/core/input/: cache.rs  mod.rs  state.rs
src/core/input/events/: common.rs  converters.rs  mod.rs  pointer.rs
src/core/platform/: mod.rs  native.rs  web.rs
src/core/profiling/: gpu.rs  mod.rs  state.rs
src/core/profiling/cmd/: mod.rs
src/core/render/: cache.rs  cmd.rs  graph.rs  mod.rs  state.rs  targets.rs  virtual_swapchain.rs
src/core/render/cmd/: mod.rs
src/core/render/gizmos/: gizmo.wgsl  mod.rs
src/core/render/passes/: mod.rs
src/core/render/shader/: triangle.wgsl
src/core/render/shadow/: cmd.rs  mod.rs
src/core/render/state/: binding.rs  collector.rs  library.rs  lifecycle.rs  light.rs  mod.rs  scene.rs  skinning.rs
src/core/resources/: allocation.rs  atlas.rs  common.rs  list.rs  mod.rs  spec.rs  storage.rs  uniform.rs
src/core/resources/camera/: cmd.rs  spec.rs
src/core/resources/cmd/: camera.rs
src/core/resources/environment/: cmd.rs  spec.rs
src/core/resources/geometry/: aabb.rs  cmd.rs  frustum.rs  generators.rs  mod.rs  primitives.rs  spec.rs
src/core/resources/light/: cmd.rs  mod.rs  spec.rs
src/core/resources/material/: cmd.rs  spec.rs
src/core/resources/model/: cmd.rs  spec.rs
src/core/resources/shadow/: atlas.rs  cmd.rs  mod.rs
src/core/resources/texture/: async_decode.rs  cmd.rs  forward_atlas.rs  mod.rs  spec.rs
src/core/resources/vertex/: alloc.rs  arena.rs  bind.rs  bind_cache.rs  defaults.rs  mod.rs  pools.rs  storage.rs  types.rs
src/core/system/: events.rs  mod.rs  notification.rs
src/core/ui/: animation.rs  build.rs  cmd.rs  events.rs  input.rs  layout.rs  mod.rs  render.rs  state.rs  theme.rs  tree.rs  types.rs
src/core/ui/egui_renderer/: buffers.rs  egui.wgsl  mod.rs  textures.rs
src/core/ui/widgets/: dock.rs  events.rs  mod.rs  render.rs  values.rs
src/core/web/: input.rs
src/core/window/: cache.rs  mod.rs  state.rs
src/core/window/cmd/: attention.rs  create.rs  cursor.rs  decorations.rs  mod.rs  properties.rs
src/demos/: demo_001.rs  demo_002.rs  demo_003.rs  demo_004.rs  demo_004_graph.rs  demo_005.rs  demo_006.rs  demo_007.rs  demo_007_ui.rs  demo_008.rs  mod.rs
src/demos/common/: commands.rs  geometry.rs  io.rs  loop_utils.rs  mod.rs
wen-test/: index.html  main.ts  package.json  tsconfig.json
(+54 files in other folders)
