[package]
name = "vulfram-core"
version = "0.1.0-alpha.4"
edition = "2024"

[dependencies]
# Helpers
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
once_cell = "1.21"
ctrlc = "3.5"
smallvec = "1.15"

# Serialization & Data Structures
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
rmp-serde = "1.3"
bytemuck = "1.24"
encase = "0.12"
glam = { version = "0.30", features = ["serde", "bytemuck", "encase"] }

# Graphics & Windowing
wgpu = "28.0"
winit = "0.30"
gilrs = "0.11"

# Notifications
notify-rust = "4.11"

# Image decoding
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "webp", "avif"] }

# Binding dependencies (optional)
napi = { version = "3.8", optional = true }
napi-derive = { version = "3.5", optional = true }
mlua = { version = "0.11", features = ["lua54", "module"], optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = ["napi"]  # Default to N-API export
ffi = []  # C ABI / FFI export
napi = ["dep:napi", "dep:napi-derive"]  # N-API export
lua = ["dep:mlua"]
python = ["dep:pyo3"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

