[package]
name = "vulfram-core"
version = "0.2.3-alpha.10"
edition = "2024"

[dependencies]
# Helpers
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
once_cell = "1.21"
ctrlc = { version = "3.5", optional = true }
smallvec = "1.15"

# Serialization & Data Structures
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
rmp-serde = "1.3"
bytemuck = "1.24"
encase = "0.12"
glam = { version = "0.30", features = ["serde", "bytemuck", "encase"] }

# Graphics & Windowing
wgpu = "28.0"
winit = { version = "0.30", optional = true }
gilrs = { version = "0.11", optional = true }

# Notifications
notify-rust = { version = "4.11", optional = true }

# Image decoding
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "webp", "avif"] }

# Binding dependencies (optional)
napi = { version = "3.8", optional = true }
napi-derive = { version = "3.5", optional = true }
mlua = { version = "0.11", features = ["lua54", "module"], optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
rand = "0.9.2"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "DomRect",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "PointerEvent",
    "WheelEvent",
    "FocusEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "MouseEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Navigator",
    "Gamepad",
    "GamepadButton",
] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["napi"]  # Default to N-API export
ffi = ["dep:winit", "dep:gilrs", "dep:notify-rust", "dep:ctrlc"]  # C ABI / FFI export
napi = ["dep:napi", "dep:napi-derive", "dep:winit", "dep:gilrs", "dep:notify-rust", "dep:ctrlc"]  # N-API export
lua = ["dep:mlua", "dep:winit", "dep:gilrs", "dep:notify-rust", "dep:ctrlc"]
python = ["dep:pyo3", "dep:winit", "dep:gilrs", "dep:notify-rust", "dep:ctrlc"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
